--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,6 @@
   "description": "Example project for tutorial on Bower for Tuts+",
   "version": "1.0.0",
   "dependencies": {
-    "bootstrap-sass-official": "~3.1.1"
+    "bootstrap-sass-official": "*"
   }
 }
